@startuml
'skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype polyline
skinparam linetype ortho
skinparam classAttributeIconSize 0

class ApplicationSession
{
    + static getInstance()
    + getCurrentSession()
}

class UserSession
{
    + getUserEmail()
}

class GreenSpace {
    - name: String
    - area: double
    - type: GreenSpaceType
    + GreenSpace(name: String, area: double, type: GreenSpaceType)
    + registerGreenSpace(greenSpaceRepository: GreenSpaceRepository): void
    + getName(): String
    + getArea(): double
    + getType(): GreenSpaceType
    {abstract} + displayDetails(): void
}

class Collaborator {
    - name: String
    - birthdayDate: LocalDate
    - admissionDate: LocalDate
    - address: String
    - phoneNumber: String
    - email: String
    - taxpayerNumber: int
    - BINumber: long
    - job: String
    + Collaborator(name: String, birthdayDate: LocalDate, admissionDate: LocalDate, address: String, phoneNumber: String, email: String, taxpayerNumber: int, BINumber: long, job: String)
    + equals(o: Object): boolean
    + clone(): Collaborator
    + getName(): String
    + getBirthdayDate(): LocalDate
    + getAdmissionDate(): LocalDate
    + getAddress(): String
    + getPhoneNumber(): String
    + getEmail(): String
    + getTaxpayerNumber(): int
    + getBINumber(): long
    + getJob(): String
    + addJob(job: Job): void
}

class CollaboratorRepository {
    - List<Collaborator> collaborators
    + addCollaborator(collaborator: Collaborator)
    + removeCollaborator(collaborator: Collaborator)
    + addSkillToCollaborator(collaboratorId: String, skill: Skill)
    + getCollaborator(collaboratorId: String): Collaborator
    + assignSkill(collaboratorId: String, skill: Skill)
}

class GreenSpaceRepository {
    - greenSpaces: List<GreenSpace>
    + addGreenSpace(greenSpace: GreenSpace): void
    + getGreenSpaces(): List<GreenSpace>
}

class RegisterGreenSpaceController {
    - greenSpaceRepository: GreenSpaceRepository
    + RegisterGreenSpaceController(greenSpaceRepository: GreenSpaceRepository)
    + registerGreenSpace(greenSpace: GreenSpace): void
    + getAllGreenSpaces(): List<GreenSpace>
}

ApplicationSession --> "1" UserSession : userSession
RegisterGreenSpaceController ..> ApplicationSession
RegisterGreenSpaceController ..> UserSession
RegisterGreenSpaceUI .> RegisterGreenSpaceController
RegisterGreenSpaceController ..> CollaboratorRepository

CollaboratorRepository-> Collaborator
Collaborator ..> GreenSpace
RegisterGreenSpaceController ..> GreenSpace
GreenSpace ..> GreenSpaceRepository

@enduml